QA fixes - spacing

--- a/carolina_herrera/choose_store.css
+++ b/carolina_herrera/choose_store.css
@@ -96,7 +96,7 @@
     padding-bottom: 2%;
   }
   .bw-iframe-container .appointment-rsvp-container .title h1:after {
-    margin-left: 60.7%;
+    margin-left: 62.7%;
   }
 }
 
